# ChangeLog for net-p2p/rtorrent
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.179 2012/12/16 23:28:58 zmedico Exp $

  16 Dec 2012; Zac Medico <zmedico@gentoo.org> rtorrent-0.9.2.ebuild:
  Install the man page.

  10 Sep 2012; Christoph Junghans <ottxor@gentoo.org> rtorrent-0.9.2.ebuild:
  added prefix support (bug #431160)

*rtorrent-0.9.2 (09 Jun 2012)

  09 Jun 2012; Justin Lecher <jlec@gentoo.org> +rtorrent-0.9.2.ebuild:
  Version BUmp, move to EAPI=4

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> rtorrent-0.8.6-r1.ebuild,
  rtorrent-0.8.6-r4.ebuild, rtorrent-0.8.7-r4.ebuild, rtorrent-0.8.9.ebuild,
  rtorrent-0.9.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  10 Apr 2012; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  rtorrent-0.8.9.ebuild, rtorrent-0.9.1.ebuild:
  Fix to depend on exact minor version of net-libs/libtorrent to prevent
  incompatible versions. Each minor version of rtorrent has minor version of
  net-libs/libtorrent associated with it

*rtorrent-0.9.1 (08 Apr 2012)

  08 Apr 2012; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  -rtorrent-0.9.0.ebuild, -files/rtorrent-0.9.0-canvas-fix.patch,
  -files/rtorrent-0.9.0-clang.patch, -files/rtorrent-0.9.0-gold.patch,
  +rtorrent-0.9.1.ebuild, +files/rtorrent-0.9.1-ncurses.patch:
  Version bump (#411041), drop upstreamed patches and support for color. Too
  much work to keep working and delays updates.

  09 Mar 2012; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  rtorrent-0.9.0.ebuild, +files/rtorrent-0.9.0-clang.patch:
  Fix build problems with clang

  08 Mar 2012; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  rtorrent-0.9.0.ebuild:
  Add correct minimal version of net-libs/libtorrent

  08 Mar 2012; Justin Lecher <jlec@gentoo.org> rtorrent-0.9.0.ebuild,
  +files/rtorrent-0.9.0-gold.patch:
  Add patch to link with gold

*rtorrent-0.9.0 (08 Mar 2012)
