@@ -21,13 +21,13 @@ EBUILD rtorrent-0.8.6-r4.ebuild 1660 SHA256 390c90065a7181efc5e924e0831b8e400fde
 EBUILD rtorrent-0.8.7-r4.ebuild 1788 SHA256 23390c6f1c02bd7bf46bb2cbadb33ea49db42735665b89335f958b910cddc59e SHA512 fef860b5e5e49611cf43fa77987ba3f02a0a7750fbb4dd5f1e4c05e81a696fca8b58b0821c6ba6630e35ae08113e9c09d6123136bd0ddac235326951e7aa377e WHIRLPOOL ffc5a7e7f915973f419305623f97ea9d98bb691dc95dcc578866607392d58175732c53d8b20e2ed9c7b94bf12b49dd7ffebaa6d1167f760af6bffebd2132752a
 EBUILD rtorrent-0.8.9.ebuild 1826 SHA256 27febd2f7f88df037957e3002bb0584a78f14f1f29e6410664619b7f25703782 SHA512 758bfa9838aabc85b8eec0442a528f201b7d446e5940d9287f7749ce459657198244fbdb70e0da614b18512a9fa29d27fd1986633b547cc55e44d7ee8c90c432 WHIRLPOOL 521892188071bbec678c0c5d29f13eb93976fb05e9c36dbb8d38f622252c1d7e504ae55a6d66dad2cd096810adb3622c2ae3be0ccf4cd1255084f609c897e673
 EBUILD rtorrent-0.9.1.ebuild 1301 SHA256 4910693dfd495ae8dec9d9c3fa91ba90fe9454c6c72db033ee56164400a399bd SHA512 154fc179afa696beddbda1efcd812eb461d734c5d57cda7f314f7199be7c3557983f6a559696d0c3174312d755f9434a2ec28676c97957410c351634b5e739d4 WHIRLPOOL 8d09a9ea58b27f4ce3e0f8e8c19afae841541b40962391a831a12af873fde71978a46354b37bfecc47f4f096555a7e463c8112bf579dd0fbd7193f60b3192a72
-EBUILD rtorrent-0.9.2.ebuild 1423 SHA256 bb1a4e8e255ae57072cf2002ce9e0b48267af84f8bf1a9fd8603fa0ce044bb0d SHA512 1e3f9820f3053f11159a1ef7f45c17dd3c5f595693fb3e50a42b0336ac6be72d76ad54d5819cb634372e09ad6812ad4ebaef573fbfa99ab38e16fee48dcb4d0d WHIRLPOOL f316987f878580102637cabd3eb6eb53e6b66f50ce0cd2a4202b9557920a717ab15c335fd37878163bb296c26be65f50bb03f47cf865159f66fa46e686aba905
-MISC ChangeLog 27140 SHA256 819907c0307acd5f48de0c993fbbfc212df3ddb9151b2314249e4e87b45c15b9 SHA512 caab1caaad8d7b703b2db1b32c2e353f41850d2e978f472a0c41be508a9fddb3143eed783c3acb4a64c3540031a050d72457cc60e4f7bb7e2537b8684c781f6e WHIRLPOOL 077751ba9d3f42cdebac1eb663957310f0bdd649645fd559f3d140ba6e60dea838834654243ab8d7a6ea988b539809e9ef1de0904d1e7bd4cb2cef8cd5945386
+EBUILD rtorrent-0.9.2.ebuild 1434 SHA256 9f93b4b85b63f91015023592cee2053a6b7c54d101802c28a6e1e79f8bfdbc8b SHA512 b03a305350977d47621d043c4cc9d2e5e1a304c524742641cdf79122d7b843408354ee03c462c9dd9bdf59bce1746e28244df75d8f8f0ce4796d4a4e51d305ab WHIRLPOOL 8b54fc97ffaacd23b49499dc017849192589cb284e60777b8a3c1bdb0fa506fecbe70d779940683feaa576c5fc5140581a7597f418ec4959588eddf482b89757
+MISC ChangeLog 27237 SHA256 e62623c7626f478016b56e2990d86fa1706ac8a1e02c2f330122b3997b89d8e8 SHA512 2a02e3930de22d0bc8e84381de27378ba2b6c4a7f56ab1e59e83873443d32878be4db77f53ec5f3969e0d4fb188f000347ae6bb0092379fea2fc85344da66c57 WHIRLPOOL 06a0d700512f540d30e1c78a303bdae5ca42e82a05ee39f449b55067db9c052aa1c7ad2b3d6235246b14180be4955413f456c435d015f93813d93a8553080b8a
 MISC metadata.xml 461 SHA256 db7942b39f614d72ff07b2ca64acbddd975cc016761d0037eb9edf786a4b295d SHA512 3d458e127eec25eeeb9798411adb32add57a13b908d66ecf6b2c414df3cef9d65322c46a103616ed423554b052e52701af7a34a5157438661d88f85fce52f6f0 WHIRLPOOL 395cc9fe276a67aa7d0d7e0a04f27c85d9e16c17d872e85bd240fd149c8f36497eb14958a810c461f8e94056e44817c1d169f37c1964fa91bb0000ac54038139
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDOWTsACgkQ/ejvha5XGaMWoQCggQ5Mla7BaxNwG6+N+R8CrJi2
-HxAAniuD0bNlrA0rII8+gObiS8+/PyEC
-=zWy2
+iEYEAREIAAYFAlEnrJUACgkQ/ejvha5XGaNMQgCfcpaI7+hrMLz0014MwRcC9lP5
+8Y8AoNk1ekxCgKCCBXrs0qr6DZ/F+WoH
+=gLjs
 -----END PGP SIGNATURE-----
