@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/rtorrent
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.179 2012/12/16 23:28:58 zmedico Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.180 2013/02/22 17:36:19 zmedico Exp $
+
+  22 Feb 2013; Zac Medico <zmedico@gentoo.org> rtorrent-0.9.2.ebuild:
+  Add ~arm-linux keyword.
 
   16 Dec 2012; Zac Medico <zmedico@gentoo.org> rtorrent-0.9.2.ebuild:
   Install the man page.
